update cloudflare config

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,39 +1,43 @@
-#ENC[AES256_GCM,data:pSdb7Gxh4MR+T8T0Q9JblDIE/XeDbpm2VOE38zPMdqOSv1NGQPLEOM58X7GvaLb4cjN1uvvBcrdBcJMzlwFnaiI=,iv:v1e55Zb3BSVJJW1MVlBq55/ac2H0d9TpJWa4MGdsl/0=,tag:YfPByaCp6udIyR17zh5AgQ==,type:comment]
-#ENC[AES256_GCM,data:D7+pqi3vcXUYA/h8EE+Bh/aWSUWIFG+jyb6G+VAtiGV3PcRkEcQp7MzQBSE=,iv:Yj3mvj7Ut6b5EnFgL/XOVqPRnTScXHesVh+r+TQSYxU=,tag:VaOIBJc+c6BDKFo61AwRXQ==,type:comment]
-VIP: ENC[AES256_GCM,data:VJuI3w0d5NXQ4MVN0g==,iv://u372LaEzhQslSG8A9pSZ2kh9G65+LRaVBsSD+zDzA=,tag:7hRdKFmlL8utywfBVKVp/g==,type:str]
-#ENC[AES256_GCM,data:DNdI9B1+CnYr9x/ZqCQL0ZdNJtp0Ox9skezl,iv:6ddfFcmBVAZIvvdO35rnD0a8vqMeNf22wqLDahZxRtY=,tag:BJ1rSSpT3EyhNPUbaWZV1A==,type:comment]
-#ENC[AES256_GCM,data:10wBW+DGMOtHhHWGoqS5z/YOm1BO1xj/XKz7UUDO7plgOUFJymbssAbaF4q8titYzl7rkV5QoMUy3HmJ6DuJGJpgwGNZMmXQ8IFPpKOGQMUVIoo57XUPw00=,iv:RQhR9JsAxHIFNwERHf7VANKBRjJhoHorhrUiLtne8Yg=,tag:eZCHZg+nqe0uE+4V++YdFw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:KjGg2W1GhJRwm9qSi24=,iv:0E1MGot3YCMZFjE6uNILQhpieX2DSF8I7aAEp47sIEE=,tag:suk2HhsLUklxKd4hVf7CZw==,type:str]
-#ENC[AES256_GCM,data:jnP5HCy3Gm1YU/yayO6gl6KqY/gRaPi7idTQc6vYWtVocA==,iv:EED6SuF6EQfB5IHFX9cNLXxFSohmRHvWPpckaHKLHlo=,tag:QlfXuOk1pjhsuvVOrksMYw==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:DpV2I0Ev0BRCD6HIIA==,iv:22diV9OUNMMtcx6Ri5xLABjoXsCOr1Bu8yYj3SVALwk=,tag:P4rsSwvZ5LBl9Y+DIDP/KA==,type:str]
-#ENC[AES256_GCM,data:MH65VFT7MYRu6P4BKIzRsDq6GqX3FZD1SeRsmOKEecqprrR0KQV0OOX0dIaAAyc=,iv:wDKZVpvg3NWFlAGSXgVZrelJoIGZbvvKYclc18ApuUk=,tag:Ql+a5Sgco4jKl+o9k0+0/g==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:w42wKBByoH8I8hn5Pslpf3//jUy7SOm5B15r2VQoxA==,iv:sjfeezuziPVsgD/xmKCbOqcQ57nOHiojQ4dbulNkwJg=,tag:aVdNeNbAnuzJCcwzmCDc1A==,type:str]
-#ENC[AES256_GCM,data:S+ZMyELv3rRwSrOir6WD41Qsjf5Nx7SXSmgSvWdIPxNdTp8UTcmTqfzTYmg7YmEe3PZw7PNxkcTACNO72D4FhYTushlLGE18fsTJePn9LrjGrQ==,iv:zHELQco6Y7HOqGb980g6/shgDoH6WQ1lHWxNdnenmPw=,tag:wNAKiSzh5pG1bsMrzCf/zQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:6HCUQsMWyk+khSfIuKCr,iv:fAVrAjvV6dbNtsCGHm5ULi+Pf8ltP979/9e3Zne4Zuc=,tag:2MHI7K2WXiWJbe+uui4bMw==,type:str]
-#ENC[AES256_GCM,data:KBxJ9en3So+wT2Oj6i1QBNZ40P9KNY/HjolIBiFyW8e9,iv:kCCuqQlCRZAmbUQbDLZEA2UydtXtWgXQT4qf2wIBxWs=,tag:5xbGqfKzEK1KLZcCcOYPXA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:Y5j8MvvKY+5mnPW1i9wJ,iv:ZJ/NJIRdpAzMdzT+YNangM0plLe1Z6Q+flquPelDGNo=,tag:48xb+oKF/ecDlm+dgRiLrA==,type:str]
-#ENC[AES256_GCM,data:rM0LnFXyO7WQoY/JQRMgQgJlt3Fr8CxbdHc9LySFSccBiLgX4V8Nji+3ghGNz0cn3N0w7W+EHh8j4vrSc0QXpw915Cu5u71nzuoVY47nDJQ=,iv:V8ZaNU3A7LuBZCw2lBKfOyKHPlVJWGziiTzQEsnw8Lo=,tag:KRsRhryvJRmlyjJ87ORaTQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:92abkJJFUa5pgvXhe7SH,iv:nbG+xmnjivkSF8aiY5UVNYriv8Zy80ET1ZfuZpkxLf8=,tag:bi6FFZSrp73Sd7TZJqtr+Q==,type:str]
-#ENC[AES256_GCM,data:JUJTmbC4kaaz59n1MCD02F+rQqzjBYWry2L92jIP2xcL0BvgcG/nkXI6mlG2KEauglt3GfIiGgEHqIHzUnmROa1dJjPHUANLqAwRmNrnS/SttHE2Cjau,iv:fJDWCiltESAp6LMe+CiYrBifVubujhXIN3bfQuSyeNs=,tag:t7AhrXfYTtIERJTJ7KUKVQ==,type:comment]
-#ENC[AES256_GCM,data:GV2D68udXWJjnAj7FglLiJyJ3mwDz2BZw7ywXZ5r93dtG/SvLC9qKqefyPQV0TgqcEsVtDvMAfeNdwegJkrHNxcKfGUihVYOfBFqCgCwZEi/pxwt3MhjxBnPQM14sJe/3rvTdNVr37EBeE8vBXqajjVXf74lJ48jB6Nz8g==,iv:xHdjhYikPv8bHVNqId1r4O67kQR6wjgLDUmfI403R8I=,tag:9J/WcCY5jh1vkUaXsIaLsw==,type:comment]
-#ENC[AES256_GCM,data:d4YZrQpINJPKGyuH+K0w3VV79GiO69Bh841tyHv4xmRrFEhuBWhVj56mqwsXOkyQdiVwpFkY0C2rPIsfzNEH7GoQVqFd9ClHZyBUlZN9Jog=,iv:zKE/VeON3l3bfqE7a53ABdwTTr80G2O8ukFlCqqa68Y=,tag:sqRZzNIVHAy6eI98IexoXA==,type:comment]
-#ENC[AES256_GCM,data:zETzTDZwllfk5/svbx0bZB9XaWcrrWFFY0nqfHhpiV9bX5IZLPb9bm1RGy/9hXotSNMdeQU5,iv:+zavOdragLqqRsAi39EXFG8F3ijkrMHmiAnf9V910gU=,tag:IZsgjpMlALXeucxvq7/o8Q==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:Y+fS6nSOO8VCE69m,iv:q+yUdFxZ6mTN0HWC3N1DztLP5EMhvSvqWgQg6eSeYXE=,tag:sT0lr1v/COJvccSThARwuQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:rk9DTARNCOsSWKgUqaNRsl0=,iv:nd5LNYVM2R/kR/7+B0YEuOwqum2tV3HWZILT/Tt/v7o=,tag:5l0nuaNsJxbWRRdjlXuAnw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:VOl8QeByJrppYdK+o/FbDbX3X9RTLBMBX4j0zxB9FFA=,iv:VbmyJY3GgecMNbbv9FQuqxRlt/h7fEKidb5XWtE3/Ew=,tag:svewWHFYVsI9m+my1fgAaQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Wl4UW+MgVNYYRbKPG6NbwF8yh4o1O8Qs8TEyw8ZmvSFj/K1DX91lgQ==,iv:RXCfxeIMAC+EijEGFsxQQru7yXTvUApqL5wAcAHNEZw=,tag:imK1mWIroOS410TH8P44KA==,type:str]
-#ENC[AES256_GCM,data:5M8qP7Sf2EUuT4cfaZgbCN598MeIKrxp2ijl07TDoEScwN08CHc553c++MOp6MFsxLwHoBRg74KM8IV6/JczuQ==,iv:Dwgbg5L4YtRCLHGTvm0bsFQIbj5ymsP7S+Lnl3X6S/c=,tag:ChCyv4pYAV9uaimQkzNYBw==,type:comment]
-#ENC[AES256_GCM,data:nyOFlSGpWj0LqDtVwq0D3pcOcHakOkR9XgeX4w1H6bE4QOsvcdzP6Sn/rFgQdBznAhqfzK2YBy8=,iv:YQlf4l5RsN+eKYXq/K4pKPm1tAgvwW8ut5x4qe4EiIc=,tag:gpLY/97ylLrfWMDWWTu3tw==,type:comment]
-#ENC[AES256_GCM,data:j5u3KQbB5raC/4L5hvPFnh4aAOt7U9xuyQ==,iv:O5KrB48d3T17X5m1UX0B3Dd3CHmqCzSiYsvu0H48fJI=,tag:rWv9ezkmIle/a9R4gifYFg==,type:comment]
-#ENC[AES256_GCM,data:Pv3gCX9bhe2ijZPml3p3cV9iW2JKPICiq03JKaSlRrOl6sWUFmawo3FK3HAEP0TYC8Jlsvjr21CYh17ijXVOeO2F9ccdPOkOIdoXKs0=,iv:ytHtYcQ8WvrTQphP9BRAKPflX5KU3r73wD4jvrxdn8U=,tag:L+tL8m36mvBfQBKG5iFw/g==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:kh4tM9VyQLVn3oeHVSglsOIcLL9yQJdYnf82j94pnVvIQTZOw5FqLqZ+bOteq8dB,iv:cBhW6eovSTYNEKHexFmRGonLYPypSdpFA0TYS4L3LLE=,tag:nwAgxhUy3nHiRglkl7usmQ==,type:str]
-#ENC[AES256_GCM,data:qsJVj9ArCX3Y6y6lwlbqrrrCfode3gf6ixYpCtQuzkXCAM08OteCYpPpfH9a6RQjAiJOUmLHwp4Ebl1+Z2Ozri0zTexhGNs=,iv:1uDNRNBWH3gsw72Fbq/a3x8+/btQoQKyqcVBEahefEU=,tag:TqybSp3EFi0p3eK994dv0g==,type:comment]
-#ENC[AES256_GCM,data:qZdMcmkhoUR4fLj6tVHpUbPIOBklCui7FZejhRo97EZ+EUlA8bepGwu/gOnkYLJxqt9T+6rT,iv:eMigIJaSKMqsd/4oHLQsiNJ226Co8cupz9cNU/pYDo4=,tag:rKIc3Fqg6k43SYtu8sE+8Q==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:okCfQGwiSg==,iv:n9ZTM2xgYE01ETHQb1yBvG5Q6MBPXB78odQEqpeINGY=,tag:sI1UVz5h8lYm2V91Br2vDQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rv4ckSJaKjQ8YQ02J93kRxa/6HQ=,iv:FT3fwsHKjKpV4MsWzaw1koKbX6A8fG1sREWuLHIKyPk=,tag:8mIlDMWwrjbidzumZRJM0A==,type:str]
-#ENC[AES256_GCM,data:1EFu9JcZEvppKyUPrf8=,iv:sQ87abuiQVPnUoJPjPjtMjfvON4KMPOunv1aIPJYVF0=,tag:87/rpXfRSwuIdlyxa2RpDQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:dx4D1vyutNVqYLCZow==,iv:kNkLH18thC7O3tNjhL5Cv3RtT2ZiOt33rMz432lPTbo=,tag:MNKb41kzY3HCvH0U+7XmEQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:bd9NG1RgOVrUzt3vjA==,iv:RQyzNphL7KDDXnSrJlBGp3OzfifxsSNMW+sIfkI1Wa0=,tag:4I4TZKwq6FCSg0rbdwVoPg==,type:str]
+#ENC[AES256_GCM,data:O3UOFlAxDUHhA0/8+2/YsAzQdUp5Iyies/5tnRYhcr6e3mvdHpqi7sE/AEr6eHiKi7PN3f3pvpomrY+rCKsdzxE=,iv:vVzaueCX9r3MFZRN+k56LSWdZ4h3lQkhRJk1+YzuhVE=,tag:XTDyn9BU8dmM/bnuVXVVRA==,type:comment]
+#ENC[AES256_GCM,data:FkLzc8SKKOfBe/neJHRMIKupRQ7gkqjIC75ZZYk96ikUJZlJth0igZ88Uus=,iv:6UgPvbMo6EiMPWNVfDyPnk2vlrb05U0M3nRPCz38bv8=,tag:PQraqb/72pbcMjyyT+f2nQ==,type:comment]
+VIP: ENC[AES256_GCM,data:nFR1ynJt9xrvgEKgQg==,iv:vich5o0q6JZDMMvWuor1SiM2C1A+3kmJkPUVFIMoivo=,tag:XFoZWBL991ikr/C4CUkGQA==,type:str]
+#ENC[AES256_GCM,data:TT73oEOYn75i5bwBzfyWSEEBj7iSRxr7nHnX,iv:YRrgjzkLDOg+NC7g3h/t/VO+Y1ffsX75wC4GXxZ3DUw=,tag:ty8tha0JE6IlWDmgl7qQdA==,type:comment]
+#ENC[AES256_GCM,data:gnz/TvGGn0PAiPbySQeYMgVozw3+PNL94XmF4804NtHFAjaHNKo4N7nl/REvEiQDmLs76EPfuwd2vHuf6B1BtXePTZR3wKum52W2ba/K8UAWLHvPOM5yD2g=,iv:g4Kb75GObrBy6TWjB2OFzTpk88COFsJLkNDyFjm7uoM=,tag:RE82JWdv2G0q0GXRbRaKYw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:VYQ8NHa4l79rY7BQ+Ak=,iv:126XrcbcnIyA3mBg00oBPGCEPHmYxjfph8zeD6P3rF4=,tag:TjwqMJiqrmxDjWYNsna3tg==,type:str]
+#ENC[AES256_GCM,data:1jpfdg7XHezy5dZVwhZQ2rWqVpRhSbtKSqx6BWkYohlXTg==,iv:K4syj0hOYLQnLQU4WYIakmCudUQcu68elWLfk+7Wry4=,tag:fDi2z2vX7+VuEksi2QYmog==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:yhvhFl4MyNkoAHFj9A==,iv:s4DGLtyrGjWssa51hVAQooYiuZJZYWT/J/qZM4/Zjh4=,tag:2yTlyrchC7nanB/OaUllMw==,type:str]
+#ENC[AES256_GCM,data:asBfz66Qr/PumQXtmAXQuWp5QOgHyZyP59DDY4wiPrycoYnFjdD8yKfdYfWFr1c=,iv:pyPvDAPkbrt/p4XsPRdPwzAgDatkaCKll20Ei9A9a8A=,tag:SlTbKoPfjjWM9hkn/FPhvA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:FYcpbLPhRciuuXnxGicAfshsmCXA2LWi3GVbNaM5Mw==,iv:MS/a3bEQSE6kCJR0cvllKBMiCm7jfcOZxN9CWotbRUQ=,tag:7XadB/803/pbyxwL/cqtmA==,type:str]
+#ENC[AES256_GCM,data:dA8Kf9TNxNDAP5uFj58OZQ64EZV5zXVnCZOcO4hYEp3G50wYDU8+di4WPS0TrZwR2qw6DfXm3b5iv3qdI3EKu4BZF2wEsf+t3H0ZmNXUGmUN3A==,iv:+CbfR9ayKgRVgS2f1bChhjWXpdILB9v0+HRTb8zU4bw=,tag:93UJR53wiV9gXXFksBQ7Lg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:Ah36hYdgx8Tw96teI4OQ,iv:eiwR7wCuxqKQEHfEGn4fH8NDaqC/527A4BBygehs79E=,tag:C6QZ8WTgaw86zxPWSRzEiw==,type:str]
+#ENC[AES256_GCM,data:50U1F6zTEeldNjJu1bP44tmAeqUmIfDIKSpLQ5STzXau,iv:TawbsGURfCf6Ajz0z0MXLEfEgAPvWDWCiGCTIbxmnLc=,tag:73VWsqeMQ59DAaPQGJ5Qfg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:49qxZNw1/wqO2fhmmafB,iv:KGI3B1i/DFLPi3eEL43owMphnjFUq1FxzoEQyJidllk=,tag:k346b1g9TPoYYA0M25YpKA==,type:str]
+#ENC[AES256_GCM,data:d9ulfgVafKyzp86sSelKwGbmwdt4eEyKlaxsl4L9zNo88D4Hvoc2jCJtjh8YXEbmRavdLXwfApg3rj8ncAGp7c+8Whb/jwoIRRSKurWqkp8=,iv:afATOwPS6oq6qZmVYIoqV9S0GPFWyTAhLp47djKfwJI=,tag:zNAz3l5h7qC8W7kjr71wKg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:HmhGfjK/QQeWiiNLMvnn,iv:185BOiGTzw+ndv79JBquZPNOBOiTQ8qhzcnsKbK+tvc=,tag:N4n7rIDnAOTHGcSynKVI5Q==,type:str]
+#ENC[AES256_GCM,data:ClyV9Uvyr0kABz8SDAj62IUZCRgOtvzCrzBp+of3DIdOpPOcYKFFmMJx+/YC3iLBjRC0O0JhOxbxveiejobNKkPkUbgFy1hQkudWgYuMVOjXOrOGgtfF,iv:TmRtrugYIwBrNZn2OdlTmFPoNUDwuKR0WzToXB83JUc=,tag:rWlRRAQcgTF4EpOx67ABzA==,type:comment]
+#ENC[AES256_GCM,data:7oIpMC83ZFyrYtxydxy7vy7i4y6F4AzARJlEbc6+IxakEc6X09iZ/91zJ9NOUX0AR2n7Ou3LhVARQVbhnguMVYxTa/T6Tp8qEitLhqLalZUAVo2PcMkGsHvTq/YzfDGFkxJIds9M3iB1unjbYBFXH2ayKyR3Ed285wJrxQ==,iv:f2AgL1uNplDN+kAzXnJhq9yRzaZGTsK+3KEKLHSet94=,tag:BLbarrtIVncWtHherApomA==,type:comment]
+#ENC[AES256_GCM,data:UGTUAqY9faVrdkvuw1qjQZJ+EmdiEzBHoxQJk7I352dnevagIuISxURXov+AcbiS4V+ch5atrYyRyrbMWW7iCYgPawkWowLBzzOCV2lka4E=,iv:VmW7wWYQuEMhbVkPek7F9V2tw7VxWQW5iC2z6bydlPE=,tag:Te9040+oL8CQFUPjw3TlhQ==,type:comment]
+#ENC[AES256_GCM,data:NiQ2GyU+6Ygteq16xn1KrnO0nTUTUDOKMoS1iM2CRDk9uuij7/NneSx3yh5UEstMwJ3S+LIO,iv:UUO8VM2pj8Y2ZG/75Wg4lRGyHjaBSI6EW/p78FPze4Q=,tag:gkaZEcbwH7H1l7U5H9ql8A==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:r+Hb0ozRAbdNsS3k,iv:5l/hmJEHA8Aeia49rGoAAte4djjBfBv6k9LCVQvHjOg=,tag:2ayLrOab3H78P8oWkarPpg==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:7TNAMNLm2YNUtaKFIk+JDAs=,iv:WJxwC5C1gJdeDbrvICkhhxRT8jw9XcC/eh0ExuyBO9s=,tag:p/UEfK/442mbtcsbTqL52Q==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:VnOF0rTniyHdm40kp8tr9WX0oe5iR8wkGVJzDsFMtII=,iv:xqlFuYEZ59Tp4jGuJaZFOwQJuZ8fAJXvx47ThWsjJs4=,tag:wYnv40siqTasujez0hu/fg==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:q9Yv7C0epiK8/EdQOnVIi7lOSrbOVBeT0DedLt9o1k+9yFo9x+2GvQ==,iv:dlh6WCZFBArwpy8uAmyjTcFzkzxNOMPBf0m+u4NQJ5s=,tag:jYwdtnmY1qzzOdz2rIiTfg==,type:str]
+#ENC[AES256_GCM,data:HkwMTmlAmnmtBcvFMVHD9lV5YakD6CxiyIh3ZjYVMKvjIZ7H75Oqi23ugJjOV3x+CJf+MShpBLJB+nvN5buMww==,iv:SMdfoTem4tHq6s7GitrA6fAa1IXubGPEIej+++9CzsU=,tag:vl73xwbQKvUKNWE6B+5Oyg==,type:comment]
+#ENC[AES256_GCM,data:Mph6qMyMs0XI+/63kJplJGiieerw6x0VO5SC1ng8nX/43XIyPS+s3Km+Hr+7BK44Bq9yDVVdor4=,iv:bdxsI6V+LW5LZgTtdpX7IuEkrMJaef6YHsHB3XUxAkI=,tag:OKepWpwz4TInnkI8s8f0wg==,type:comment]
+#ENC[AES256_GCM,data:gyD2Z+on9W4LlbaLyZqhOPHTcWC+m1LUew==,iv:GumocgeqDtF9fOVfodKePI9PWlSPfRokqJWuCX7zCQE=,tag:GmC88fLTy49E37Bryom1jA==,type:comment]
+#ENC[AES256_GCM,data:rPf0IZ/sZgVA03GjIUMYJuVhAsROvRt9Cxp8VH7EXRXsQEwW07jgJQJn/VDi02qW1s7vH+cLyH35M01upm+E+3Sb6G05QdagGkaQ/nc=,iv:oZqf5ZgopLY2AayL49qnuSPht4ZKKHnfT1pg03cfr30=,tag:K1gYaQu8s3hzMTF4PLs9sw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:DJ9iUcqFCtgdV68z3nPSIUxC7Qz9WN9uK+D3CXjnEwK5j2eoEw8S1g2b8qbI0EZ9,iv:Qe7odRJ1X+d+zLt+I81hmQ/dQ0Y+ruxaOE6J9klUhZM=,tag:KjYqKuHTEFEetM9tCx5WwA==,type:str]
+#ENC[AES256_GCM,data:G1nEjEeibxaMOXC/kQ6OMPkO6OT4kExBfCmVV+9weBobn6KtoPCp0DJmRWuVrAKxtUtr8RU886wCSiISZX54ToBxXfTueiU=,iv:HENAXaf1kNbb1U3OoHl2aDtLWBLIksqNRJTIorZz8Qk=,tag:424hsn7BNpbsI+cQsy7wLA==,type:comment]
+#ENC[AES256_GCM,data:qxox0kVKrCcUsSgKqPhIcehBh/9q+oXZSHt3bQ0krUqGKyrWN3FRTH/QQaCkG5DzqF63TdkP,iv:tg8yDr+j+XBoFIvGTCZAE9WT8ZzgoyIJlijPOZBG29s=,tag:Q6dZ2Of9EWKF5NE0ULX5GA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:spgpxieCJw==,iv:q6VA42aWShBkK/zhY4Sflwe2BIv7ILubTI5YGA/Eqd4=,tag:MwRt5OPQB5u+KJI5ixGs1w==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:IQ1eXMYo4IZHcdlgdfiukjQFb+s=,iv:ez7dicyh7JlGRbz7534/zZmZi3C+m36IrD0SWYXPO5I=,tag:gsbdAJNggEX+pqNYT+w0SQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:0EYTo5ftWXpC1OU=,iv:K22TTj8r5S9PYeWKpg3FFbXWW3IpMJn3P3tObvFR1hA=,tag:XTfsyrHVW6PGMmPJS/IK1w==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:69pA4fZh89cq8z3d1OQD,iv:RosY8f06qRLqcDACWW5cP7LC3tRsF0PLeYuejadzvy0=,tag:iwxuap7+2vEQRedWZ22w2A==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:GH5cH3xXsyVsqYRhPaa6A90SSBCA90QUtw==,iv:X1nQES+UBC5FtmnCpTJrySf1AA2cpR/WCMfP+74awzk=,tag:7H4gxlMHnjQ0OLNNAcCLDw==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:PcLAV0fHVglzoqgKqZjS3Riz6giR4kCF,iv:UQd65Q3md4oAq9GSs6srp5LsGNj+NsTRBTrzk6jR2V4=,tag:iNPgOfaVZBvvjCb+I73tWA==,type:str]
+#ENC[AES256_GCM,data:pcCHLYr7/2Z5Maepb+8=,iv:5ZJ8eCDLL7cxI7m/adtsIwQ3rLDZjOFshNNGX4fVXCQ=,tag:6oGIzzBAGimXoS1SzRmpKg==,type:comment]
+PODNET: ENC[AES256_GCM,data:bKuPIsymdTHCEKJWdA==,iv:HoIQbryrFfjAihCNIoNgptAN2nbO2Ht3SYtyBVXbdmc=,tag:hrpmKeh+R3+2sAWWDDmSDw==,type:str]
+SVCNET: ENC[AES256_GCM,data:za0Hm8xGiC3q1RrltQ==,iv:MiquVwtOoCD096pVv84t7TD41vFVDdIpFMKxc3SVNr8=,tag:zkBY7tS6ytNtJjzDrlYeEw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -44,13 +48,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzNTNhSXJaQ2VwblRJb2hj
-            eVN6UzhJOVVDWE1OcWg4UzY1VjNOdHVZbjN3ClBuT0xUdFhLdUYzUU9sR0VadEhz
-            T2ZNc2JxMzR0NlFqOXFITkNyTW5RV00KLS0tIG5MdUo4eEQrTU8zekc1cXd6WGlB
-            cnh0ZXFXc0pOZEZicDRQYUxqUWZUbUEKbCv297cC15ic+uUjge0/begHnRtWtYmA
-            WYo7Ovl04lyUx7DkWEBendumCO1/a2NHAkKKu9dHMlIvS6JLIMsK4w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvaWtoRVdkT01MMHZaOWRL
+            Y1MwQ1E2a2MzbCsxczBSalF4eHF5SVRuWG5rCkg1eUdUbnUvU2VoOGovUExIMHlG
+            cnFnb0FYdlBmWXdtZGtiUHVlTXZhdVkKLS0tIHJLMktuNkJlbzZlNjBLcloydHd6
+            Z1RFejdWYkFGLzQzR2xUWnl5V2pWMTQKaViPDEqldywCywoKDOxT/HdLCIeGhm+P
+            NVlwTobmQj0bjp1zPVno3ezWwHDLMZBINKO6CV9+j1EO+5OR1vFY2w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-05T22:01:25Z"
-    mac: ENC[AES256_GCM,data:Bx/uIxYySp3Liw0/G0B3SKFJVuMRm1Vl4pZU9i2y8+hpPmKcElH5r7iNv/WWBDIed1eIqDdBYC5umU7KfG+orT9chB9fZeSbEMI+zs2oMbQQwYXWERsKDsTfIrEPxSUHl+dE0uK2/HU65JljvvfTQeUh9f3omKe298P8cSApc2k=,iv:NjU5sbBp4SPCdWu88gv0M0cLThj23R/kxKc/7jxocyU=,tag:5gJr8oQYHGA63cyDI1STSA==,type:str]
+    lastmodified: "2025-01-05T23:38:39Z"
+    mac: ENC[AES256_GCM,data:a24xgwx8TXjOBpYwBYGnqBotmPLehtBVc0AYV1Z14x/JHFQb2WR9/r0JKyZA5FChkbiMTZKggK8af3nrmxzduUWq6l7kTqXxi5ZmXDd3jgNtK657bXOJx6KgTC1770GnwRtCEjnneHlH2sCdTlCW383syvZKvRU6ObyE9cZhDNI=,iv:jfmxymsQVgPJ2REplRxS4jCruBJK6+0FV9O959Z4Yl8=,tag:FAvwsFsKyCfmFj/kJVRv6g==,type:str]
     pgp: []
     version: 3.9.1
