--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,43 +4,47 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:JG1JIyfrYzeWX+xt+yl259Sr0qJ/mfPsZPAk/ZmtE695DWsgrLjMm7dItYYfxZLaIacwdL8uvh5IqZr2q0cWSxw=,iv:Fgtg8uZuvvO0NoqsFujxtucBsPL5gu5P7w63qufXsGE=,tag:pSGC+AoWYLSXP20OAbFU6g==,type:comment]
-    #ENC[AES256_GCM,data:hlvWawzKuUI0Kd4E5HWuGJ9kEV7/M0tiTGoVSUSq5va64sqnIYU0f2Q80yg=,iv:3hyMzToXw1DWXII6tOgV0t6o/D12WpFGwvZNBZzeHKU=,tag:Pt5/eKnYtgCVtyCBMTASjg==,type:comment]
-    VIP: ENC[AES256_GCM,data:7k3MGrIaRClCjpdSNA==,iv:0pTBL1DP9e8jOJJe0pC6/eX7kKwTMuxpPwFP/yD1K9I=,tag:NgmwtxUII0nBOlG6yuAggg==,type:str]
-    #ENC[AES256_GCM,data:NFMowpPLnU30qTdaNwOKH/TqMiqOfXP8xdWc,iv:VHiF/S3/jvzUtV6EbwqyhrjuudeQYJV5jezAYiEl3dc=,tag:RdULkpcFRFVS6f4JjhqF9g==,type:comment]
-    #ENC[AES256_GCM,data:PdElk9YslvTu3JCMNU9Rbx140kViKA5KIrZ34rZs6kQhW2JlvaXjPEiTrNKdncaYwuo4Z1WHsh/M32Kd4VsV4UotSkDqA32Es6wHh3QRRG8FqkQebviymhg=,iv:mwpRyPxXApT142WI210WQo0/uCxI+9w+XYxO5tEoTqY=,tag:qsPeJEtpdkQbYQjlIju/Yw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:l9SbSlv85Xq/mJxiH8I=,iv:NSLv4BCfzc5EPx6sB494VMacfjXuwHxrODnTPyedNMQ=,tag:OIvxlJH1u91bfSZUyzN7Dw==,type:str]
-    #ENC[AES256_GCM,data:VgUn60LPG8+VjsbcbiczrfyB1D/l9m/VbwCId+ILcIwWYA==,iv:yZ4XuqzHf0F6Fa6C7P+X7jmQXQ8sl8D5m2naVhFpsQU=,tag:zvE2Ey3djGD+Omb4usfbkw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:MDWh2p6bsCBvo+ImCA==,iv:/YaDNbBZMkjaFNSF5aOQT66jd6+m1s+5OW1WafsAxyM=,tag:bB69mJPaCA/eRS2BPdyC2g==,type:str]
-    #ENC[AES256_GCM,data:0np6vREnn6tOR7PekP46O+4yd4/rsrnBoWbnRZ8gy//HmxIq/t54VxpEWJ3+ja4=,iv:jzshxzv2kdnN11mwnB8TW9wNhTwg9OwHmP4U+Gb44Tw=,tag:UZvoQ1MYb0vYP1QLd5hhkA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:pQFHoIZswOa8ZKB48ouhwun7nqiMZ2PEZrax5jvWMA==,iv:E+VJtKD28dFZS4rYm2PX6d+yW7o6wZEfJM/aPAyJjok=,tag:6GgIZasWZRmVht2qCv43mQ==,type:str]
-    #ENC[AES256_GCM,data:gUNTFPfiy/Nfng6Kvx81hsi2d29Au3BqsmKx29hDq1cZnYGQJDUTU2wKCYEmCkzJz/WSPT7AFgbVNlWiaMdixkzpvGMhRVbOFfePoZPQMATUhg==,iv:N8F/55vH2ttXBLwd9hOLLhnEBoGnEhTjm4V6vhFSiP0=,tag:3PEPeUl4BAZMmQ5vnqfklw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:U8wErQbk4jujaeTVTVXe,iv:DOfIdJazujrcpR4Sv9s4M4OnJ6Ty+WpsYEPqe0iSRDk=,tag:pxB2CQyRGIIoiGOHdc/QpA==,type:str]
-    #ENC[AES256_GCM,data:8AYhuVYUce56LU4TnjYy++DSCXJH0J/TC7KYjYQ5hZQ+,iv:mbM87ctvFu8hnmqXbQwvee+3MesSwPDvitZ10fM2ezI=,tag:+kAplO0WhUuAx606iYU7lg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:Y1d+SJpceEg/7Fsgt+7z,iv:yk2vL5NdlFLmc0vIivb92Ji5+B5aCJkLQC5SH8imF3w=,tag:XYIdxTwxvrG6HMmjDwBQew==,type:str]
-    #ENC[AES256_GCM,data:rYrJcZRvtzAkhsUlwZk91f8sxnCrQQO3k7ZyWEpB0tpUdVJgY6JPGkrem0rqw+OVSsGRVDtKIZ3ntGcOcbK6nFRVg78WKAieD3nbl5eoI1A=,iv:BR2Olb81+VsZVDmqf7a0LiRahWCIuyR1RGADKZCnrnQ=,tag:DwvocTe5mf6ZGdaItuVf6g==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:0apt4f3I8hTkPlTM5OKP,iv:HP74WOTl5j3MOe0uiwCEXyd3+caLRe+MwnycQljEJP8=,tag:XXptSUjyDq7aEIk/MwsaJA==,type:str]
-    #ENC[AES256_GCM,data:Sv+YjRVRmGCzQzZufYsEp7wLmJmkBmrPQpFQY2+kFhzf8tLk7fin533iQ8BucBctkN/aO27CizJof61fujQK2vEIKAdid8Cblj+fEEUs8B+dOdjSaknu,iv:N+mMOmrdhnlrM0gswCrVWPuxu7b3qqBcjI6FIR9QNF4=,tag:WQrHDUk+0FHiZ+QU5rECnw==,type:comment]
-    #ENC[AES256_GCM,data:OpGGwXjYv0PNKSpbUUD9VhlZ1rgAltuSN1QbSM3AebQiY0uwAZw3jch3aF4q2Kb1D+K5spHeeA/QmbOZQvbuV0qoz0HtZndj5Dhe0lvMiUQd/ObdGB2A2dTHfDkXiCz4xfjSyOou7udAtGw6NNSWPpVb+NoygTwDL0mCAA==,iv:T704RyvlGHuNTCAMNUwA6foGQ3Y+1MgauK/jTY8V1VU=,tag:0jkoTzz1X1mP3GmGdefLwA==,type:comment]
-    #ENC[AES256_GCM,data:hhjHQ54SsAHRFSh2iZyXWkA/xe3Nue9icfvJE1rue04wZYxfWNA5ppjFFOH7ruVGzdngcGoMQVI4bmPfw47Oz7UVXh8H4imrrUTaXUASty4=,iv:rdh0/S4n0UD1LKAkwZLll5ntZ8X8/QOPf7MUXq29+ZE=,tag:UCPTyT7Ye7BacTS6dXLCGw==,type:comment]
-    #ENC[AES256_GCM,data:oDEycYiuoJRRjRShphc4a8H9pw4O4gt4zbViHGf5H+Ah3nFXfQ+GyYPwGUkkUKolcVJ32yAe,iv:6oFQO+D8qJPwEWuypjlh8OusxRYhnWtl7q//zR/Yeqc=,tag:7H4zMhq1XhnAGYA74knbOg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:iWlGKifN2hELRFRY,iv:eH4kj7d7sTGNlgQo1FddrF7bMfPNiZzJgXQ7x0PhwVg=,tag:TqwG74aI/50lpbJdL0OUMA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:qKOadqwbHr8+dH9Uzbz/Fjs=,iv:lPn4mgz+83w29yWLWIQteAPNPOt7R1u3CS3ob4HYkbc=,tag:2LCQtGIgNR9BMQDIwqokyQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:s7moIses+cYe9WTqPTopBZK+Y0IqsCgNVdXIlNNVra8=,iv:EGKuDHJWH3QbE03mGDbF1b+fdsI2lTN4uft7yK4DD40=,tag:PJLFHQxIuC0uClREYVozVQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:0aQsq5pufolfT1MDhLm/Tf/SDtVUejWpixdeYGbiMdJG3yOH+DNHkA==,iv:gcBs4n4CIZ0MdobLKvPaFI0mSk3+T2JJ4nFZGC6wuI4=,tag:1ux5JKq99tPIJKPUls253w==,type:str]
-    #ENC[AES256_GCM,data:Jp+JUO6U/kTMe8nYUxHxSWe3LHvG3+ZZxf9UyJ5UXtpUVA0+HB6HeY0JJZxOj9jBro2ia7EIGJnMH5VI450WNA==,iv:hfPiichRn11LD2GDRNfCETG4Sfua0QyxTiqDW3GAPRo=,tag:FXW5hMjTAjNm8t3Sl/WtzA==,type:comment]
-    #ENC[AES256_GCM,data:EFYZhZUtltLDfn1EqGg3cLQg5Wbb87YU/KhOe0M+xrdDx29GRLEAo1UkS1R9HQ+MldJDfyL28bQ=,iv:nbSMqz1mUgsGlPxGcZ2nbLgHZu5IdyD0qLjjnO1Gnxw=,tag:eRBc05NqYUarX3l+eAxNzw==,type:comment]
-    #ENC[AES256_GCM,data:DIi6/Zk+DQj4q1PTwIVekGBmiwRAx0QH1g==,iv:JEaa1Bygnph+9byLj4UM0amI3N+haMu4EyFdnJ9Ibbw=,tag:NF6sTdc9q+T45lgNytWxjg==,type:comment]
-    #ENC[AES256_GCM,data:2MMsjZPAVrEy97WOoxMSnGJyb4sRrKqunw0jaLC/2B8WpOPJV6xTs73FGNPDZEJ//p1YlmautoglC5gNjiIIDEMWad9nTV7bh2PAGSA=,iv:JuGJwq0929O1SoGvR0HcW87i5LhtBhdnxc39ArifHZc=,tag:PxGSG7rLVMIqcj7vRIWO1Q==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:YbCtfDohcjH/hSDhtGUsetcq5Rbp7LQjcpMv9WvuieVlrYf9SBgR1oo4S60uHSXV,iv:OEg7XVjHZQRXeWYlCcWgxc2JuzbBk3pXyANKxbK7y3M=,tag:jjm1RFcdlghCru2TBMdmRQ==,type:str]
-    #ENC[AES256_GCM,data:R8KlCoZhcPtyjh1Geh2x5yHr3Q/9GiMAklEHdOr/GX3MpYLscznILD2/uVBFLEr9AzTZCI2ii++5T1LA5eiAgGPcdd4+DQw=,iv:hEamKZMZ9WDBgtgvR9jxMqbRTxa1W69s3MhIQmu4zGM=,tag:gZDgSUJ2t6eb3CUkVSEicg==,type:comment]
-    #ENC[AES256_GCM,data:Y8TVF3rnI/7klj4GRyPVCj56hNQk0WtuwNwt5Iy/v4VC1Y5vWB8MGafm4HDgQ7BJiNa4ZJkK,iv:BYN5RtSi5n+G50zSQE35jj5uxRQbCqMWz8VfR5pzprU=,tag:NxCrYTpubgSxiJ/DyJ7v0g==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:HjRNx7GePA==,iv:awfaB5qYoymRxZ9MY/EgavvOx4WfXFIcgRqJxgV2d8M=,tag:TmMOGGd4LE6rkaxhEexhFw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:4GvFp1FF3M3JZ3rLEj/zWR5akOo=,iv:B0DA6Z8QkUZAzfB4bydOsLSNHrE1nRMMiUyJ/pQfrn0=,tag:WZKWbhyvBYza/JiyV9EEjA==,type:str]
-    #ENC[AES256_GCM,data:7PZXismP2WskCuh3x1Y=,iv:51Hpiksya+JoQCtYZ0bpN+R7I1Cfcv+edgbiQSQHsho=,tag:stBKbeUGqyOnyp8KdYg7LQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:CGpvoLWDmqld1DnhUA==,iv:sG2PfL1eMcKj8wn5cY8Tih8e2E+7hbi2afteYaDIyqY=,tag:3aMQm6lTLSN57fEUx9lU4g==,type:str]
-    SVCNET: ENC[AES256_GCM,data:4OEZyb3GT7QJKPUW1Q==,iv:Z/7zfxgjy3wPXPTeeqVRt+ZhDcrOdLpK8qzkMhQpcZs=,tag:tWWUgm47kCS4qXpxmZZDbw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:HmVhpg==,iv:3WjvG8xURBzqMaF4CvTwLHdE7bBashbWfFq0Fx6T/8w=,tag:YyFIZD9ma/KqcCx+O4aEQQ==,type:str]
+    #ENC[AES256_GCM,data:AP+u9uWTHrtG+mYFPD7MSD2F6OPCMcnoGBupq2n/yvdQ2lnx9sKlA+jrKKRzQQN439/mITd8wqKFxoXvtUejpZs=,iv:xr0CBc+h0rxeBc6RIJg9WgiwAnev4pRLU0B39rx2Ikk=,tag:YjSprnHPBXiU/5lOque8jg==,type:comment]
+    #ENC[AES256_GCM,data:1LNfrDRv4l9x3NWUglTQUDMCkPdtiO81OgBwNIZjrSYpANCJ+9QlxAgdul8=,iv:x7vzZ9goA8l+TYgCjG62160U/guNQhW+sraYMYB7144=,tag:IozHOPxzcA1fSgs+wlbdCg==,type:comment]
+    VIP: ENC[AES256_GCM,data:BaEIPQ+s59wt1QX/hw==,iv:nhMxkoPXpQH7Mvsv4Vu+oO7zKOw7dc+c4EDX269tdzs=,tag:MxS3/2puYJonKo+d78Qt8Q==,type:str]
+    #ENC[AES256_GCM,data:HTnkTLPHpD0ikeCM8rAjAdvGnI6ksQRA11+k,iv:60XBu17I8cb09BUAC0PXEwVLHuq9CHZFON7zCB4iqFk=,tag:ljpp3EzaMVaKJuOL28WnlQ==,type:comment]
+    #ENC[AES256_GCM,data:+wRzGXxz0pRLQ0fL5aPbJAjOxjT2BTKmNHkuL4rFBUfuxtdzXScCdGDTp1drOUlruUjIBNLQ7hPq68UlgT3bU+7Goh1pc5hrhU8cSdjPjTe+hy6MY3xv4L8=,iv:93OHeyrU/L2diDzw8tWCIP0O5VjKyZxGlmfBO3uR4jo=,tag:+ltzobYjghM+S9IUm5cgOw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:FHShrcVGsoAAziHoCkE=,iv:avLBku4BCOTLD9OmRpM5CivqPwpwgTisjTY/YXCoWmI=,tag:EaxTEFaNn+kHIegZYoOh7g==,type:str]
+    #ENC[AES256_GCM,data:72Y7fma2iUiTJs+1qRCVItRsXOEEEIJq0hIye/QFqYr/Aw==,iv:gekwkYZkARMOQ13Oql3zOn9FM7YiNimhC3lcZk/nO4w=,tag:mwIfltVhutHdS6jSXMoUjQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:6/fyfHaWn/5YGlOd0A==,iv:MJiZS9siO3+J0ieZR0SwVBjQHfPyeczF5GCaw3y/WFw=,tag:o6IDPTu7/LbEp3vfniCaKA==,type:str]
+    #ENC[AES256_GCM,data:pSXIrA94wZKF56rzaC+GWa7dBtruz1kGBcQJTHE/w8Kn3BMOqPvc/kI3kWrrsAg=,iv:3TCFT2LMEvJQXmdKMmixpi7wNvF6KyceuegePJ2AOrU=,tag:AGUNvxpdCJjLn003cXzqbQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:d/PyLHOlBq2vscq0D8q5S1jjp4ru+CZy1McEpQYwxw==,iv:tqW+jHo064JdtEwXoOxvlpiTYXqnV1o/BC+tE8W17Fo=,tag:Ou/MbDmFQdx448a23eYFWg==,type:str]
+    #ENC[AES256_GCM,data:CyyqWgajJeWQwF0yjAkZOtDAz/N7f70JeT1FQaIk6NyJHM8Cdg8D58KlfTrSAKYLn5RcYzo+sLIRM8Px5ohjkCGh8kO/bRf1FkPzeDzu+1uabg==,iv:XwSedcIydjyFkew9bW+pV+57+xrf6slaI+IonHsqcc0=,tag:9SvPbK3HH8+XrTyXTsdbFQ==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:BiE+aX6auhlpPsPrfeDm,iv:mM8nP3GRBXD5ArEeJvF1jW2EyNPydmO5+e2AYYTmsTs=,tag:5yURLL6ClmmHBkCXCbDy9Q==,type:str]
+    #ENC[AES256_GCM,data:zEtv2NLmWRlfSuOlIPyAWt21Xvc4D2DdVVQHyIdLtpqe,iv:Dw6qDLsGjtd7xrtnLmXOujNJaQ74yS2//x1LxcMgicQ=,tag:NN5J2onAJZLR0ZUTzubQbg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:w3oE36SG8eFKu6eMlVwO,iv:NnVSLoiKR9jl/OnNxEydVzgt2KrYMSMOMa/RuB16cMo=,tag:zDsur7tQONiuuPTHjGSmDQ==,type:str]
+    #ENC[AES256_GCM,data:WodLO5S2sj85FDVqdDQsXNqwfxyKaL7i/6fRchVh96XEw0jIxX1u9MNVpTv54nUq7VSdXToJIjKJfr6D1hOLzhYDEj8gISubKDcJRpcPxsw=,iv:4ZEmoC7TOfDXAx8neAZZg3wL47RAie+rjk5ZmWP0A4U=,tag:qwy/bXMbc+vjihyalI/XWQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:sfC5U/nzlmWrTYsU4cTP,iv:CuUVg6XDm9d/eMU3S/AMDtgv+5jFZCSEqZmKbWvlfNY=,tag:QwqePcMefYCk0V1YIMCRUg==,type:str]
+    #ENC[AES256_GCM,data:o5SZ1VKAopJhc2X67WzsH6FJQer2CnXazo8xYRJaH2oirCcV8p1eMOeQruPDC6xcoGIGv+OvGH74hi5gjYt74emb6lPtgfSRU5fnnAX0DzIMpPVe8dCy,iv:vlsvEmd55wCDDibasITMbW6Aj8ZcvB63uHO6qNgCtX4=,tag:943ANmtiyl7dxhbBDqcyog==,type:comment]
+    #ENC[AES256_GCM,data:lhxXplZgLBo0ddwNbolzsZAkmXpuw+ASFSP/ccx2+EPJkw6c5FRCWACj0saIg7q4zdY2DGI8tsAz5xbgSV7D5S6Wrvc/U/fRPTpvrmFYz2hg8xMUSHsC1fQrmAMXl8moDNYsrTXeuJC1ULeh0pmJdxcSRi/DaxRLs8ECPw==,iv:Jeczg0lWdDZZNQLRf2MULH3D0Ko7NxnRPqsse2/RQhc=,tag:GNF3dEWxhLQGSvqPDhpggw==,type:comment]
+    #ENC[AES256_GCM,data:gzV8wqYlX//zDFxq1CRN94g7Yhhy3QsDSzdlSsU29UJJhWwqdh6iAagGOSleT9a9U6dR0W9KKkBhg/i8pQ8JrjB3YgNVDYJQW1jdvbq49BY=,iv:F+rKqQt6o9Q4fgHYI94ztCiRtB2OTswRZtJiugPLJVw=,tag:AwbUy8WeSxf++Jf2KlE+Cg==,type:comment]
+    #ENC[AES256_GCM,data:eCG5ItZPIaOG53wUCj6D6gY1guF3H6suA9FogzUuCUyJ0eP5nzd++b6pn9tD0t64m747tWjE,iv:Zc3YjJi7zCpCcAFcho49qEci3YP4EHfLvs2SrJHT0S4=,tag:n/XQNJRzMYfbm4nyU9P+EA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:P+EUC3pAKG4lIfby,iv:mgnJJDG4Y3p1EXLDLpnfx5FBvGr70GZiWRO5uo+EP20=,tag:oV16bhZxqZHl9v3T7Dzlhw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:omkVb1XzwxAiJU1PGiqjtEg=,iv:DfoWitSLg5CYmLXr7DFVUOmMidGotgPP5i0fNMGVA5E=,tag:HxrPqXQ8610iZGm5jvH3Lg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:wjIxE1WWE91npppKpBBFOVYpGtYM/bycu9piQ+z4TgA=,iv:AjMFed2hHPx5twZ86591Uqa0q+DQJX9ZWQx118vNmtg=,tag:W1tbHCcaJ2DebkRdkdZs+Q==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Nix0f15TBraaPAyHjstg0aKCWbrZmStsOVqdyf8pQTJtZBsC4PdzZw==,iv:qc+CIDqX9kYEKc2ER6is9coP5WVspwYDjFitzZVRBmM=,tag:yj8+edwwPocDI7WQo1JMZQ==,type:str]
+    #ENC[AES256_GCM,data:fhij2rGuUEnyd3ZhCMUZ0ohtPYG4KpWliou5AuLfBhiYDr764H+P0WgWzmW1DQSuE5t65ep+8bUhkp1trw5Tjw==,iv:7etzNQVyNFbNhXd+Rbajrtb20fDlonEnQO+DwMchyiI=,tag:wrG/sW4LZnahuCwpI8v6yA==,type:comment]
+    #ENC[AES256_GCM,data:MYRYrUBIPqgfKzoLKFDzPGgmEYSQJ0qWIZY79HL/FXRK8E11XrLlxun/li+6sqFyz35U05kmHJE=,iv:wBmXimmCQ05borY8rLi/aEOtfDQYFrFeHdP6zQl0NGo=,tag:Y7hHjj6NzR86yk+emulr3g==,type:comment]
+    #ENC[AES256_GCM,data:0sF8ugiQnA1lUOu1602R3kkrobXt3sF1ag==,iv:jakpySTsVzfCEA2FCnwUzgNKgzAHE/iwQEdWBUq3Qzo=,tag:aGSyRu9waks444DInPiYTA==,type:comment]
+    #ENC[AES256_GCM,data:VV3hKbmiTqERKAMzBQK5s5l9qFVXr12Cc/G+SY4FOeLLrIzZL/LJAe8wvVvRIe+GDRINJqM+o/qVOrsWe+MnAf669FbH5TnjXk4dDIw=,iv:VsMfT1OpJ7HsD2XCNj4LAmXE8WF0i7khwibqB9gIWWY=,tag:if1I/yIC8KABChr8pjhdow==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:Wi91q1NrDvPnCAX4qTz8f7gyiRvbAuAobyaSrr/D7+M6f5Pcg8FdlKyh2E+wkTuE,iv:IGpT/pFAj754ZcRO5k2b5+Rn+iCfPEKHmJHOQCLwIZ4=,tag:qeZj6rqsIuma6SJEFp7ZCQ==,type:str]
+    #ENC[AES256_GCM,data:yYivkJ2bBhWZ9NwOLnPoNrjMEDnY59Kquvn08ER6DeqzyywaK5k03/pswBMFbBhTwI4IDgEr3kdAOepIQ3eKLqzQi65eyMA=,iv:xZ3oQLiXcdpakvHJ7BaTpLIDxwTNO9LXYsXV3HO7QUo=,tag:qLIy1+9pxajrA4T2DV+Utw==,type:comment]
+    #ENC[AES256_GCM,data:Z1FtsC7YCwXtl/J7KD23L/CJaV7HwMrgleKpVQdHm+ER4hpT1I2VMve2fczdl0kcik6TB/pD,iv:HzSbU2xRvJcQfvsSGN9IJFbKGU66rCaQVN9/8Rgm1Yo=,tag:iTr2NMPFwDGlcqMdJbjHZg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:bIUwrU1BCw==,iv:WaDWylle5VuOhN9LnT1F05BqBWnuBut43u/WM4j/D6A=,tag:PkFoRz+HwoJ8SMghXspEQw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:lp/SfsKPbmVx01uyKBW7c2RprZw=,iv:MmneHS9wT4Zj7wrc5l5cVmWmKhh1jRNG2kWNWwHG2MA=,tag:wLaT7y2VBmrAYGEyTdFQvA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:rlYggyg8JhzyYDQ=,iv:RTN77lQBdKpdoPt1nYoQkC//1WuWCZe0D0vfphpFuAY=,tag:MDWScUPqtH8y+0x9+vlmXQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:+qzLEZcmX5cKXTEr2Ewt,iv:nf6m8CINiSpFEv1tWNC0l+MbLhkkpao1QuJWB0dZRAY=,tag:JRA6Ajce2tRzKyNmvKby1A==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:pbX9Q9SHwBsbRNQ/xZejoo28xsbBuU/MGw==,iv:vNMnxniJiryWoWS5nnG4HW4Qsk3j/iPcKM66dt74x7o=,tag:XaWYYDoBgk2zvLUDwJC5Kw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:DN/W8X4fSYb8qDkAExGkAgj0Oc8Vdcft,iv:0rJ/LKZISnibrCAcotXdNfdj0Wt+sGrWaJd56QYQpu0=,tag:12jzV+oMh02SZa2lr9MxKQ==,type:str]
+    #ENC[AES256_GCM,data:5a+WHT2EiKuMfpJ1WEo=,iv:k6Tgee23uAm7x3isRDfISrnzDXvdjuJ3oq5aAHHaDew=,tag:Hfs+SQQwQ/tzDx3pSkP0YQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:QoUxt3UgaBWCb1h6ZA==,iv:dfK1W49/9w3Eu+9a0rmqFBwBDabp9hOXKzq/zl4pi94=,tag:QLDC8biLlHm8Cm7cm7Ls3Q==,type:str]
+    SVCNET: ENC[AES256_GCM,data:f2+Yp6XV7o8ska0YzA==,iv:3VxSukGsFrTnXub6pWIkhfpX9N1lqKedkaShdaSV6DU=,tag:U7/kO/XIDcl59LIAxZGw8w==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:+6HN/g==,iv:I/apkgv2mFKt38dUDWIbzVFNR9sEvYuMNoDPem4k7QM=,tag:ZwKmKAN7VBm0XpUI0Utqeg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -51,14 +55,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0K1N6SEw0dFZCaldVMllX
-            NGFkRElWWnd1cmdJem9YVzNuQjZ0dlExamtNCmRrazlpK0FkdjZOeE51TFYvZWVU
-            dmJTbEhKTUlnMm11dHhLakRxRkl6bEEKLS0tIGJQQU1NZURFVmpPZGhrMWo5RHhE
-            bHVrOTJ2UFFmcHlWU1BLbWNMSnlyVzQKNSdJR3PTswFtUK2pmtkq101ad8LMJ6fj
-            Bhiy3gayDpgMyaB/A+Gy5C+dhZXW84J9bDWLSzCCUleDkj0UX+LIUg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTNmJ6ZWlIbnpCa0JjRm5a
+            c3NHSFRLbERkZExWdmJtVEpDTFgxNmhYMG00CjBpUjFuMTBQV2VYV1g5U01oTDhU
+            Q01pSFVMZ2M2My9oNlJoWXpzbnBBUzAKLS0tIGdVOXZOMUhvdkRvaFVoZFBTYUNL
+            U2RFZ2JFL0J2WDU0Ukl0aXd3L1NiUEUK5AUI8NmZsJHI1bsyBEIbdLCcrwtwPOrW
+            ryeS1egNGEMDArgs41AHPOhPaByNDbF7nm2KK061P8qwHBvKm/8lAQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-05T22:01:25Z"
-    mac: ENC[AES256_GCM,data:+38xqU9KSIAtHzuEaq1erUzvOlHccZ6WhpTkAPUceSui6gYbGsS8O0zBZ2LeniNO+PEysxU3P5Q+jRgoJtwsUCR2Dk12N7OGr+Gp8RTURsMH4fVrNXavsmKq8lINBwW+CKicYEXDfHl9nxCetDZiUwNy2szrJm0+oNYfxmg8/gA=,iv:cE3U+8ErTd7Ox3kpnXGq6jWmFEZG6rW1JbFRh+bY0uI=,tag:qg+D9QW/+GHFngggp6aqpA==,type:str]
+    lastmodified: "2025-01-05T23:38:38Z"
+    mac: ENC[AES256_GCM,data:65YAuLvZMm3jRmTb6MhvOFvKPYtmwxnMoKrsTMvcyx9Xqzdm/m6lvEdbbCNLaKAurndSjnBek/2gg63EpaW2O7VYgVLq4krop0f6I6BR92QAk1dk0L5zAG6LwdnzrNplsni3rdEoLpOOQtjd9fmzFKIvOPaq2LkOv5Iv2fcvlA8=,iv:uuIgEP8zL4LviEz+GMOATvGSCcVO6uj7mOYb5Mqzx84=,tag:0TR+5PrkI9gFupoJ58rKBA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
